moneymaker/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: moneymaker-dev

---

apiVersion: v1
kind: Namespace
metadata:
  name: moneymaker-prod
