moneymaker/monemaker-client-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: cid-moneymaker-client-dev-service
spec:
  selector:
    app: moneymaker
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30002

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneymaker
  labels:
    app: moneymaker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moneymaker
  template:
    metadata:
      labels:
        app: moneymaker
    spec:
      containers:
      - name: moneymaker 
        image: repository.factotumsoftware.com/dev-cid-moneymaker-client:0.0.0
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
