moneymaker/moneymaker-app.yml
apiVersion: v1
kind: Service
metadata:
  name: cid-moneymaker-client-service
spec:
  selector:
    app: moneymaker
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneymaker
  labels:
    app: moneymaker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moneymaker
  template:
    metadata:
      labels:
        app: moneymaker
    spec:
      containers:
      - name: moneymaker 
        image: repo.treescale.com/jaydamon/mm-cid-client:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html/assets/config
      volumes:
        - name: config-volume
          configMap:
            name: moneymaker-config
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: moneymaker-gateway-service
spec:
  selector:
    app: moneymaker-gateway
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneymaker-gateway
  labels:
    app: moneymaker-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moneymaker-gateway
  template:
    metadata:
      labels:
        app: moneymaker-gateway
    spec:
      containers:
        - name: moneymaker-gateway
          image: repo.treescale.com/jaydamon/mm-gateway:latest
          ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: moneymaker-admin-service
spec:
  selector:
    app: moneymaker-admin
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneymaker-admin
  labels:
    app: moneymaker-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moneymaker-admin
  template:
    metadata:
      labels:
        app: moneymaker-admin
    spec:
      containers:
        - name: moneymaker-admin
          image: repo.treescale.com/jaydamon/mm-garnet-admin:latest
          ports:
          - containerPort: 8761
      imagePullSecrets:
      - name: regcred
