moneymaker/ingress-config.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: mm-dev
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
  - hosts:
    - monemaker-dev.factotumsoftware.com
    secretName: moneymaker-dev-issuer-key
  - hosts:
    - mm-gateway-dev.factotumsoftware.com
    secretName: mm-gateway-dev-issuer-key
  - hosts:
    - mm-admin-dev.factotumsoftware.com
    secretName: mm-admin-dev-issuer-key
  rules:
  - host: moneymaker-dev.factotumsoftware.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cid-moneymaker-client-service
            port:
              number: 80
  - host: mm-gateway-dev.factotumsoftware.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moneymaker-gateway-service
            port:
              number: 8080
  - host: mm-admin-dev.factotumsoftware.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moneymaker-admin-service
            port:
              number: 8079

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: mm-prod
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
  - hosts:
    - monemaker.factotumsoftware.com
    secretName: moneymaker-prod-issuer-key
  - hosts:
    - mm-gateway.factotumsoftware.com
    secretName: mm-gateway-issuer-key
  - hosts:
    - mm-admin.factotumsoftware.com
    secretName: mm-admin-issuer-key
  rules:
  - host: moneymaker.factotumsoftware.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cid-moneymaker-client-service
            port:
              number: 80
  - host: mm-gateway.factotumsoftware.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moneymaker-gateway-service
            port:
              number: 8080
  - host: mm-admin.factotumsoftware.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moneymaker-admin-service
            port:
              number: 8079
